# pacoia

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: Build.yml  CI.yml  Format.yml  Tests.yml  TypeChecking.yml
config/: logging.conf
resources/data/academic/: hedging.txt  signposts.txt
resources/data/stopwords/: contractions.txt  exagerations.txt  fillers.txt  informal.txt  subjective.txt  vague.txt
resources/op_rubric/: Oral Presentation Assessment Rubric for Peer.docx  opforllm.xlsx
resources/samples/evaluated-transcriptions/: 10_reviewed.xlsx  11_reviewed.xlsx  12_reviewed.xlsx  1_reviewed.xlsx  2_reviewed.xlsx  3_reviewed.xlsx  4_reviewed.xlsx  5_reviewed.xlsx  6_reviewed.xlsx  7_reviewed.xlsx  8_reviewed.xlsx  9_reviewed.xlsx
resources/samples/raw-transcriptions/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: main.py
src/controller/: Controller.py
src/model/asr/: CrisperWhisperManager.py  WhisperManager.py
src/model/audio/: AudioAnalyzer.py  AudioConstants.py  AudioDataPlotter.py  AudioFeedback.py
src/model/llm/: LLMPeer.py
src/model/llm/prompts/: background.py  description.py  innovation.py  introduction.py  language.py  organization.py  punctuation.py
src/model/text/: LexicalRichnessConstants.py  ReadabilityConstants.py  TextAnalyzer.py  TextDataPlotter.py  TextFeedback.py
src/utils/: Utils.py
src/view/: Interface.py  WhisperInterface.py
test/: test_model_audio_AudioDataPlotter.py  test_model_text_TextDataPlotter.py
